# cjm-system-monitor-nvidia

./: README.md  capability.html  capability.html.md  environment.yml  index.html  index.html.md  meta.html  meta.html.md  plugin.html  plugin.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
cjm_capability_monitor_nvidia/: _modidx.py  capability.py
cjm_system_monitor_nvidia/: _modidx.py  meta.py  plugin.py
nbs/: capability.ipynb  index.ipynb  meta.ipynb  nbdev.yml  plugin.ipynb
tests_manual/: test_gpu_processes.py
