[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-system-monitor-nvidia"
dynamic = ["version"]
description = "An NVIDIA GPU monitoring plugin for the cjm-plugin-system that provides real-time hardware telemetry via nvitop."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['cjm_plugin_system', 'cjm_infra_plugin_system', 'nvitop']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-system-monitor-nvidia"
Documentation = "https://cj-mills.github.io/cjm-system-monitor-nvidia"

[project.entry-points.nbdev]
cjm_system_monitor_nvidia = "cjm_system_monitor_nvidia._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_system_monitor_nvidia.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_system_monitor_nvidia"]

[tool.nbdev]
